single button page

--- a/index.html
+++ b/index.html
@@ -5,14 +5,27 @@
     <head>    
         <title>Time Investment</title>
         <meta charset="utf-8">
+        
+        <style>
+            border: 2px #000 solid;
+            margin: 0 auto 0;
+            width: 200px;
+            padding: 30px;
+            border-radius: 15px;
+        </style>
+        
     </head>
 
     <body>
         <form>
-            <label>
-                Name
-            </label>
-            <input id="name" type="input" required>            
+            <input placeholder="Name of the TV series..." id="name" type="input" required
+                   style="
+                            border: 2px #000 solid;
+                            margin: 0 auto 0;
+                            width: 200px;
+                            padding: 30px;
+                            border-radius: 15px;
+                          " />            
         </form>
 
     </body>
