onclick event to button

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                                 font: 400 18px/22px Helvetica, Arial, sans-serif;
                               " />
 
-                  <input type="button" value="Show Time"
+                  <input type="button" onclick="getSeries()" value="Show Time"
                          style="  display: block;
                                   margin: 30px auto 30px;
                                   height: 50px;
