comment id api url

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             let resultDiv = document.getElementById('result').value;
             let nameApiUrl = 'https://api.themoviedb.org/3/search/tv?api_key=c3b10b85e7b9f342239ab6fd3a6fea88&language=en-US&page=1&query='
                                 + nameOfSeries;
-            let idApiUrl = 'https://api.themoviedb.org/3/tv/' + id + '?api_key=c3b10b85e7b9f342239ab6fd3a6fea88&language=en-US'
+            // let idApiUrl = 'https://api.themoviedb.org/3/tv/' + id + '?api_key=c3b10b85e7b9f342239ab6fd3a6fea88&language=en-US'
 
             let data = "{}";
             let xhr = new XMLHttpRequest();
