--- a/timeInvestment.html
+++ b/timeInvestment.html
@@ -40,18 +40,22 @@
             {
                 display: inline-block;
                 width: 25%;
-                border: 2px solid #7b68ee;
+                height: inherit;
+                border: 2px solid #000;
+                vertical-align: middle;
             }
 
             .series-content
             {
                 display: inline-block;
-                width: 60%;
+                width: 65%;
+                margin: 0 20px 20px 0;
                 text-align: left;
                 color: #000;
                 font: normal 18px/22px Helvetica, Arial, sans-serif;
                 /*padding: 30px; */
                 border: 2px solid #7b68ee;
+                vertical-align: top;
             }
 
         </style>
@@ -150,8 +154,8 @@
                                 + nameOfSeries;
             let resultDivStyle = `
                                      display: block;
-                                     margin: 30px auto 30px;
-                                     width: 800px;
+                                     margin: 0 auto 30px;
+                                     width: 850px;
                                      padding: 30px;
                                      border: 2px solid #7b68ee;
                                      text-align: center;    `;
