--- a/timeInvestment.html
+++ b/timeInvestment.html
@@ -5,6 +5,7 @@
     <head>
         <title>Time Investment</title>
         <meta charset="utf-8">
+        <link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
 
         <style>
 
@@ -26,14 +27,14 @@
             {
                 text-align: center;
                 color: #000;
-                font: 400 18px/22px Helvetica, Arial, sans-serif;
+                font: 400 18px/22px 'Lato', Helvetica, Arial, sans-serif;
             }
 
             .series-name
             {
-                font: bold 24px/24px Helvetica, Arial, sans-serif;
-                padding: 0;
-                border: 2px solid #7b68ee;
+                font: bold 36px/40px 'Lato', Helvetica, Arial, sans-serif;
+                /* border: 2px solid #7b68ee; */
+                margin-bottom: 10px;
             }
 
             .series-image
@@ -41,6 +42,7 @@
                 display: inline-block;
                 width: 25%;
                 height: inherit;
+                min-height: 310px;
                 border: 2px solid #000;
                 vertical-align: middle;
             }
@@ -48,22 +50,58 @@
             .series-content
             {
                 display: inline-block;
-                width: 65%;
-                margin: 0 20px 20px 0;
+                width: 70%;
+                margin-right: 20px;
                 text-align: left;
                 color: #000;
-                font: normal 18px/22px Helvetica, Arial, sans-serif;
                 /*padding: 30px; */
-                border: 2px solid #7b68ee;
+                /* border: 2px solid #7b68ee; */
                 vertical-align: top;
             }
+
+            .text-offset
+            {
+                font: 700 24px/28px 'Lato', Helvetica, Arial, sans-serif;
+                text-align: center;
+                color: #000;
+            }
+
+            .series-overview
+            {
+                font: 400 16px/20px 'Lato', Helvetica, Arial, sans-serif;
+                margin: 0;
+            }
+
+            .meta
+            {
+                font: 400 20px/22px 'Lato', Helvetica, Arial, sans-serif;
+                margin-bottom: 15px;
+                color: #496074;
+            }
+
+            .show
+            {
+                display: block;
+                margin: 0 auto 30px;
+                width: 850px;
+                padding: 30px;
+                text-align: center;
+                border: 1px solid #000;
+            }
+
+            .resultDiv
+            {
+                margin: 60px auto;
+                width: 1000px;
+                padding: 30px;
+             }
 
         </style>
 
     </head>
 
     <body>
-        <section>
+        <section id="tv-series">
             <div id="input" class="box shadow-box"
                         style="
                                  margin: 180px auto;
@@ -97,19 +135,8 @@
                                     " />
                 </form>
             </div>
+
         </section>
-
-        <div id="result" class="box shadow-box"
-                style="
-                        position: absolute;
-                        top: 180px;
-                        left: 100px;
-                        width: 1000px;
-                        padding: 30px;
-                        visibility: hidden;
-               " >
-
-        </div>
 
     </body>
 
@@ -117,11 +144,12 @@
 
         let show;
 
-        function getTime(id) {
+        function getTime(id, i) {
             let url = 'https://api.themoviedb.org/3/tv/' + id + '?api_key=c3b10b85e7b9f342239ab6fd3a6fea88&language=en-US';
 
             let data = "{}";
             let xhr = new XMLHttpRequest();
+            let meta = document.getElementById('content' + i).getElementsByClassName('meta')[0];
 
             xhr.addEventListener("readystatechange", function () {
                 if (this.readyState === this.DONE) {
@@ -131,6 +159,9 @@
 
                     no_of_episodes = response.number_of_episodes;
                     episode_run_time = response.episode_run_time;
+                    vote_avg = response.vote_average;
+                    vote_count = response.vote_count;
+
                     avg_episode_run_time = 0;
 
                     for(let i=0; i<episode_run_time.length; ++i)
@@ -139,8 +170,11 @@
                     avg_episode_run_time /= episode_run_time.length;
                     console.log(avg_episode_run_time);
 
-                    hours_required = avg_episode_run_time * no_of_episodes / 60;
+                    hours_required = Math.ceil(avg_episode_run_time * no_of_episodes / 60);
                     console.log(hours_required);
+
+                    meta.innerHTML = "Time: <span class='text-offset'>" + hours_required + "</span> Hrs"
+                                    + "<br>Votes: <span class='text-offset'>" + vote_avg + "</span> (" + vote_count + ")";
               }
             });
 
@@ -151,16 +185,17 @@
         function getSeries() {
             let nameOfSeries = document.getElementById('name').value;
             let inputDiv = document.getElementById('input');
-            let resultDiv = document.getElementById('result');
             let nameApiUrl = 'https://api.themoviedb.org/3/search/tv?api_key=c3b10b85e7b9f342239ab6fd3a6fea88&language=en-US&page=1&query='
                                 + nameOfSeries;
-            let resultDivStyle = `
-                                     display: block;
-                                     margin: 0 auto 30px;
-                                     width: 850px;
-                                     padding: 30px;
-                                     border: 2px solid #7b68ee;
-                                     text-align: center;    `;
+            let tvSeries = document.getElementById('tv-series');
+
+            let resultDiv = document.createElement('div');
+            resultDiv.setAttribute('class','box shadow-box resultDiv');
+            resultDiv.setAttribute('id','result');
+            resultDiv.innerHTML = "";
+
+            tvSeries.appendChild(resultDiv);
+            inputDiv.parentNode.removeChild(inputDiv);
 
             let data = "{}";
             let xhr = new XMLHttpRequest();
@@ -168,29 +203,29 @@
             xhr.addEventListener("readystatechange", function () {
 
               if (this.readyState === this.DONE) {
-                inputDiv.style.visibility = 'hidden';
-                resultDiv.style.visibility = 'visible';
+
                 console.log(JSON.parse(this.response));
                 let res = JSON.parse(this.response);
 
                 for(let i = 0; i < res.total_results; ++i) {
-                    show = document.createElement('div');
-                    show.setAttribute('style',resultDivStyle);
+                    let show = document.createElement('div');
+                    show.setAttribute('class','show');
                     show.innerHTML = "<div id='content" + i + "' class='series-content'><div class='series-name'>"
                                             + res.results[i].name +
-                                        "</div>"
+                                        "</div> <div class='meta'></div> <p class='series-overview'>"
                                             + res.results[i].overview +
-                                    '</div>';
+                                    '</p></div>';
 
                     resultDiv.appendChild(show);
 
                     let imageUrl = 'http://image.tmdb.org/t/p/w185/' + res.results[i].poster_path;
                     let image = document.createElement('img');
                     image.setAttribute('src',imageUrl);
+                    image.setAttribute('onerror',"this.src = 'image_not_found.png'");
                     image.setAttribute('class','series-image');
                     show.appendChild(image);
 
-                    getTime(res.results[i].id);
+                    getTime(res.results[i].id, i);
                 }
               }
             });
