--- a/timeInvestment.html
+++ b/timeInvestment.html
@@ -23,7 +23,7 @@
                             0 6px 20px 0 rgba(0,0,0,0.2);
             }
 
-            .text
+            .input-text
             {
                 text-align: center;
                 color: #000;
@@ -33,7 +33,6 @@
             .series-name
             {
                 font: bold 36px/40px 'Lato', Helvetica, Arial, sans-serif;
-                /* border: 2px solid #7b68ee; */
                 margin-bottom: 10px;
             }
 
@@ -54,8 +53,6 @@
                 margin-right: 20px;
                 text-align: left;
                 color: #000;
-                /*padding: 30px; */
-                /* border: 2px solid #7b68ee; */
                 vertical-align: top;
             }
 
@@ -100,6 +97,13 @@
                 padding: 30px;
              }
 
+             input
+             {
+                 display: block;
+                 margin: 30px auto 30px;
+                 padding: 10px;
+             }
+
         </style>
 
     </head>
@@ -112,27 +116,20 @@
                                  width: 700px;
                                  height: 250px;
                                  padding: 30px;
-                                 visibility: visible;
                                " >
 
-                <form>
-                    <input type="text" class="text" placeholder="Which television series?" id="name" required
+                <form onsubmit="getSeries()">
+                    <input type="text" class="input-text" placeholder="Which television series?" id="name" required
                             style="
-                                    display: block;
                                     height: 30px;
                                     width: 500px;
-                                    margin: 30px auto 30px;
-                                    padding: 10px;
-                                    /* border: 2px solid #7b68ee; */
+                                    border: 1px solid #7b68ee;
                                     " />
 
-                    <input type="button" class="text" onclick="getSeries()" value="Show Time"
+                    <input type="button" class="input-text" onclick="getSeries()" value="Show Time"
                             style="
-                                    display: block;
-                                    margin: 30px auto 30px;
                                     height: 50px;
                                     width: 200px;
-                                    padding: 10px;
                                     border: 2px solid #7b68ee;
                                     color: #fff;
                                     background: #7b68ee;
