style improvements for series image

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 onclick="getShows()"
                 value="Let's Go">
 
-            <div id="resultsContainer" class="grey-border"></div>
+            <div id="resultsContainer"></div>
         </div>
     </body>
 </html>
